[package]
name = "learn_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name="guessing_main"
path="src/bin/guessing_game.rs"

[[bin]]
name="stack_application"
path="src/bin/stack_application.rs"

[[bin]]
name="minigrep"
path="src/bin/minigrep.rs"

#[[bin]]
#name="tree"
#path="src/bin/tree.rs"

[[bin]]
name="13_1"
path="src/bin/13.1.rs"

# [[bin]]
# name="13.2"
# path="src/bin/13.2.rs"

[dependencies]
rand = "0.9.2"
